--- a/js/i18n/ru-RU.json
+++ b/js/i18n/ru-RU.json
@@ -1,45 +1,4 @@
 {
-    "brandNick": {
-        "text": "sandokan.cat"
-    },
-    "brandName": {
-        "text": "Gonzalo Cabezas Núñez"
-    },
-    "brandRole": {
-        "text": "Fullstack веб-разработчик"
-    },
-    "brandCV": {
-        "text": "Портфолио и резюме"
-    },
-
-    "title": {
-        "text": "{{brandNick}} | {{brandRole}}"
-    },
-    "description": {
-        "text": "{{brandCV}} {{brandName}}, {{brandRole}}, сосредоточенный на современных технологиях и увлечённый кибербезопасностью"
-    },
-    "ogTitle": {
-        "text": "{{brandNick}} | {{brandRole}}"
-    },
-    "ogDescription": {
-        "text": "Ищете креативного и эффективного {{brandRole}}? Ознакомьтесь с моими проектами"
-    },
-    "ogImageAlt": {
-        "text": "{{brandNick}} | {{brandRole}}, {{brandCV}}"
-    },
-    "ldJsonWebName": {
-        "text": "{{brandNick}} | {{brandRole}}"
-    },
-    "ldJsonWebDescription": {
-        "text": "{{brandRole}}, сосредоточенный на современных технологиях и увлечённый кибербезопасностью. {{brandCV}}"
-    },
-    "ldJsonJobTitle": {
-        "text": "{{brandRole}}"
-    },
-    "ldJsonContactType": {
-        "text": "Услуги веб-разработки"
-    },
-
     "noscriptWarn": {
         "html": "<h3>🚨 Упс! Появился любитель кибербезопасности! <em lang='en-GB'>#NoJS = 😿</em></h3><p><strong>Этот сайт на 100% <span lang='en-GB'>Vanilla JavaScript</span></strong>, но я адаптировал весь контент, чтобы вы могли его увидеть</p>"
     },    
@@ -50,7 +9,7 @@
         "alt": "Портрет"
     },
     "profile": {
-        "html": "Веб-разработчик <span lang='en-GB'>Fullstack</span>"
+        "text": "{{brand.role}}"
     },
     "biography": {
         "html": "Я увлечён чистым и функциональным кодом. Я учусь каждый день, как на курсах, так и самостоятельно, потому что знания не заканчиваются со звонком. Мне нравится ломать вещи, чтобы понять их (и исправить лучше), поэтому <span lang='en-GB'>Red Team</span> привлекает меня. Я не следую стандартным путям; предпочитаю создавать свои собственные с клавиатурой и кофе. Ищу проекты, где могу учиться, вносить вклад и оставлять след — без претензий и пустых обещаний. Если я чего-то не знаю, я изучаю это. И если что-то меня мотивирует, я не остановлюсь, пока не сделаю это правильно."
@@ -92,37 +51,33 @@
         "text": "Кибербезопасность"
     },
     "cyberIntro": {
-        "aria-label": "Смотреть сертификат",
         "text": "Кибербезопасность"
     },
     "cyberUsers": {
-        "aria-label": "Смотреть сертификат",
         "text": "Кибербезопасность для пользователей"
     },
     "appDev": {
         "text": "Разработка приложений с использованием веб-технологий"
     },
-    "JSONandAJAX": {
-        "html": "<abbr lang='en-GB' title='JavaScript Object Notation'>JSON</abbr> и <abbr lang='en-GB' title='Asynchronous JavaScript and XML'>AJAX</abbr>"
-    },
-    "PHPandMySQL": {
-        "html": "<abbr lang='en-GB' title='Hypertext Preprocessor'>PHP</abbr> и <abbr lang='en-GB' title='Structured Query Language'>MySQL</abbr>"
-    },
-    "JavaAndJSP": {
-        "html": "<span lang='en-GB'>Java</span> и <abbr lang='en-GB' title='JavaServer Pages'>JSP</abbr>"
+    "network": {
+        "text": "Сетевая архитектура"
     },
     "webDev": {
         "text": "Создание и публикация веб-страниц"
     },
-    "HTMLandCSS": {
-        "html": "<abbr lang='en-GB' title='Hypertext Markup Language'>HTML5</abbr> и <abbr lang='en-GB' title='Cascading Style Sheets'>CSS3</abbr>"
+    "responsive": {
+        "text": "Адаптивный веб-дизайн"
     },
-    "JSandWP": {
-        "aria-label": "Смотреть сертификат",
-        "html": "<span lang='en-GB'>Vanilla <abbr title='JavaScript'>JS</abbr></span> и публикация веб"
+    "a11y": {
+        "text": "Веб-доступность"
     },
+    "seo": {
+        "text": "Оптимизация для поисковых систем (SEO)"
+    },
+    "publi": {
+        "text": "Публикация в интернете"
+    },    
     "addTraining": {
-        "aria-label": "Смотреть сертификат",
         "text": "Дополнительное обучение"
     },
     "otherCert": {
@@ -138,16 +93,19 @@
         "aria-label": "Вперёд"
     },
     "UNEDaccess": {
-        "aria-label": "Смотреть сертификат",
         "text": "Доступ к университету"
     },
     "ESO": {
-        "aria-label": "Смотреть сертификат",
         "html": "Сертификат <abbr lang='es-ES' title='Educación Secundaria Obligatoria'>ESO</abbr>"
+    },
+    "seeCertificate": {
+        "aria-label": "Смотреть сертификат"
     },
     "workExp": {
         "text": "Опыт работы"
-    },
+    },"backDev": {
+        "html": "Веб-разработчик <span lang='en-GB'>Backend</span>"
+    },    
     "RRPP": {
         "text": "Связи с общественностью"
     },
@@ -188,7 +146,7 @@
         "alt": "Фан-страница Estopa. Незавершено"
     },
     "cookies": {
-        "html": "🍪🐱 <strong>sandokan.cat</strong> уважает вашу приватность. <em>Мы не отслеживаем</em>, только измеряем анонимные посещения — (если согласны). <button id='accept-cookies' class='icons-scale' aria-label='Продолжить просмотр'>Принять</button> <button id='reject-cookies' aria-label='Мне всё равно на куки' type='button'>Отклонить</button> | <a id='info-cookies' href='https://ru.wikipedia.org/wiki/Cookie' target='_blank' rel='noopener noreferrer' aria-label='Подробнее'>Что такое <span lang='en-GB'>cookie</span>?"
+        "html": "уважает вашу приватность. <em>Мы не отслеживаем</em>, только измеряем анонимные посещения — (если согласны). <button id='accept-cookies' class='icons-scale' aria-label='Продолжить просмотр'>Принять</button> <button id='reject-cookies' aria-label='Мне всё равно на куки' type='button'>Отклонить</button> | <a id='info-cookies' href='https://ru.wikipedia.org/wiki/Cookie' target='_blank' rel='noopener noreferrer' aria-label='Подробнее'>Что такое <span lang='en-GB'>cookie</span>?"
     },
     "modalIframe": {
         "aria-label": "Официальный сертификат"
