--- a/js/i18n/ca-ES.json
+++ b/js/i18n/ca-ES.json
@@ -1,45 +1,4 @@
 {
-    "brandNick": {
-        "text": "sandokan.cat"
-    },
-    "brandName": {
-        "text": "Gonzalo Cabezas Núñez"
-    },
-    "brandRole": {
-        "text": "Desenvolupador Web Fullstack"
-    },
-    "brandCV": {
-        "text": "Portafolis i currículum"
-    },
-
-    "title": {
-        "text": "{{brandNick}} | {{brandRole}}"
-    },
-    "description": {
-        "text": "{{brandCV}} de {{brandName}}, un {{brandRole}} centrat en tecnologies modernes i apassionat per la ciberseguretat"
-    },
-    "ogTitle": {
-        "text": "{{brandNick}} | {{brandRole}}"
-    },
-    "ogDescription": {
-        "text": "Busques un {{brandRole}} creatiu i eficient? Descobreix els meus projectes"
-    },
-    "ogImageAlt": {
-        "text": "{{brandNick}} | {{brandRole}}, {{brandCV}}"
-    },
-    "ldJsonWebName": {
-        "text": "{{brandNick}} | {{brandRole}}"
-    },
-    "ldJsonWebDescription": {
-        "text": "{{brandRole}} centrat en tecnologies modernes i apassionat per la ciberseguretat. {{brandCV}}"
-    },
-    "ldJsonJobTitle": {
-        "text": "{{brandRole}}"
-    },
-    "ldJsonContactType": {
-        "text": "Serveis de desenvolupament web"
-    },
-
     "noscriptWarn": {
         "html": "<h3>🚨 ¡Ups! Ha arribat un enamorat de la ciberseguretat! <em lang='en-GB'>#NoJS = 😿</em></h3><p><strong>Aquest web es 100% <span lang='en-GB'>Vanilla JavaScript</span></strong>, però he adaptat tot el contingut perquè puguis veure'l</p>"
     },
@@ -50,7 +9,7 @@
         "alt": "Retrat"
     },
     "profile": {
-        "html": "Desenvolupador Web <span lang='en-GB'>Fullstack</span>"
+        "text": "{{brand.role}}"
     },
     "biography": {
         "html": "M'apassiona el codi net i funcional. Em formo a diari, tant en academies com per lliure, perquè el coneixement no s'acaba quan sona el timbre. M'agrada trencar coses per entendre-les (i arreglar-les millor), per això el <span lang='en-GB'>Red Team</span> em crida fort. No segueixo el camí estàndard; prefereixo traçar el meu amb teclat i cafè. Busco projectes on pugui aprendre, aportar i deixar empremta, sense postureigs ni promeses buides. Si no sé alguna cosa, la investigo. I si alguna cosa em motiva, no paro fins a fer-ho bé."
@@ -92,37 +51,33 @@
         "text": "Ciberseguretat"
     },
     "cyberIntro": {
-        "aria-label": "Veure certificat",
         "text": "Ciberseguretat"
     },
     "cyberUsers": {
-        "aria-label": "Veure certificat",
         "text": "Ciberseguritat per a usuaris"
     },
     "appDev": {
         "text": "Desenvolupament d'aplicacions amb tecnologies web"
     },
-    "JSONandAJAX": {
-        "html": "<abbr lang='en-GB' title='JavaScript Object Notation'>JSON</abbr> i <abbr lang='en-GB' title='Asynchronous JavaScript and XML'>AJAX</abbr>"
-    },
-    "PHPandMySQL": {
-        "html": "<abbr lang='en-GB' title='Hypertext Preprocessor'>PHP</abbr> i <abbr lang='en-GB' title='Structured Query Language'>MySQL</abbr>"
-    },
-    "JavaAndJSP": {
-        "html": "<span lang='en-GB'>Java</span> i <abbr lang='en-GB' title='JavaServer Pages'>JSP</abbr>"
+    "network": {
+        "text": "Arquitectura de xarxes"
     },
     "webDev": {
         "text": "Confecció i publicació de pàgines web"
     },
-    "HTMLandCSS": {
-        "html": "<abbr lang='en-GB' title='Hypertext Markup Language'>HTML5</abbr> i <abbr lang='en-GB' title='Cascading Style Sheets'>CSS3</abbr>"
+    "responsive": {
+        "text": "Disseny web adaptable"
     },
-    "JSandWP": {
-        "aria-label": "Veure certificat",
-        "html": "<span lang='en-GB'>Vanilla <abbr title='JavaScript'>JS</abbr></span> i publicació web"
+    "a11y": {
+        "text": "Accesibilitat web"
+    },
+    "seo": {
+        "text": "Optimizació per a motors de cerca (SEO)"
+    },
+    "publi": {
+        "text": "Publicació web"
     },
     "addTraining": {
-        "aria-label": "Veure certificat",
         "text": "Formació complementària"
     },
     "otherCert": {
@@ -138,15 +93,19 @@
         "aria-label": "Avançar"
     },
     "UNEDaccess": {
-        "aria-label": "Veure certificat",
         "text": "Accès a la universitat"
     },
     "ESO": {
-        "aria-label": "Veure certificat",
         "html": "Certificat d'<abbr lang='es-ES' title='Educación Secundaria Obligatoria'>ESO</abbr>"
+    },
+    "seeCertificate": {
+        "aria-label": "Veure certificat"
     },
     "workExp": {
         "text": "Experiència laboral"
+    },
+    "backDev": {
+        "html": "Desenvolupador web <span lang='en-GB'>Backend</span>"
     },
     "RRPP": {
         "text": "Relacions públiques"
@@ -188,7 +147,7 @@
         "alt": "Pàgina de fans d'Estopa. Inacabat"
     },
     "cookies": {
-        "html": "🍪🐱 <strong>sandokan.cat</strong> respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes). <button id='accept-cookies' class='icons-scale' aria-label='Seguir navegant'>Acceptar</button> <button id='reject-cookies' aria-label='No m'importen les cookies' type='button'>Rebutjar</button> | <a id='info-cookies' href='https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)' target='_blank' rel='noopener noreferrer' aria-label='Més informació'>Què és una <span lang='en-GB'>cookie</span>?"
+        "html": "respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes). <button id='accept-cookies' class='icons-scale' aria-label='Seguir navegant'>Acceptar</button> <button id='reject-cookies' aria-label='No m'importen les cookies' type='button'>Rebutjar</button> | <a id='info-cookies' href='https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)' target='_blank' rel='noopener noreferrer' aria-label='Més informació'>Què és una <span lang='en-GB'>cookie</span>?"
     },
     "modalIframe": {
         "aria-label": "Certificat oficial"
