--- a/js/i18n/zh-CN.json
+++ b/js/i18n/zh-CN.json
@@ -144,7 +144,7 @@
         "alt": "Estopa 粉丝页面。未完成"
     },
     "cookies": {
-        "html": "尊重你的隐私。<em>我们不跟踪</em>，仅统计匿名访问 —（如果你接受）。<button id='accept-cookies' class='icons-scale' aria-label='继续浏览'>接受</button> <button id='reject-cookies' aria-label='我不在乎 cookies' type='button'>拒绝</button> | <a id='info-cookies' href='https://zh.wikipedia.org/wiki/Cookie' target='_blank' rel='noopener noreferrer' aria-label='更多信息'>什么是 <span lang='en-GB'>cookie</span>？</a>"
+        "html": "尊重你的隐私。<em>我们不跟踪</em>，仅统计匿名访问 —（如果你接受）。<button id='accept-cookies' class='icons-snippet active' aria-label='继续浏览'>接受</button> <button id='reject-cookies' aria-label='我不在乎 cookies' type='button'>拒绝</button> | <a id='info-cookies' href='https://zh.wikipedia.org/wiki/Cookie' target='_blank' rel='noopener noreferrer' aria-label='更多信息'>什么是 <span lang='en-GB'>cookie</span>？</a>"
     },
     "modalIframe": {
         "aria-label": "官方证书"
